--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0G52XG87P_PPkZgbnN3K4tu2gB0pEELM"></script>
     <script>
       $(document).ready(function() {
         // INIT SIDENAV
