Re-added event setup

--- a/index.html
+++ b/index.html
@@ -267,11 +267,7 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script
-      async
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0G52XG87P_PPkZgbnN3K4tu2gB0pEELM&callback=showGoogleMaps"
-    ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0G52XG87P_PPkZgbnN3K4tu2gB0pEELM"></script>
     <script>
       $(document).ready(function() {
         // INIT SIDENAV
@@ -330,6 +326,9 @@
           draggable: false,
           animation: google.maps.Animation.DROP,
         });
+
+        // Maps event
+        google.maps.event.addDomListener(window, 'load', showGoogleMaps);
       }
     </script>
   </body>
