Fixed mapTypeId option

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           zoom: 12,
           streetViewControl: false,
           scaleControl: true,
-          mapTypeId: google.maps.mapTypeId.ROADMAP,
+          mapTypeId: 'roadmap',
           center: centerLatLng,
         };
 
